; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/x86/extr_syscall_nt.c_do_it.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/x86/extr_syscall_nt.c_do_it.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYS_getpid = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"[OK]\09The syscall worked and flags are still set\0A\00", align 1
@.str.1 = private unnamed_addr constant [89 x i8] c"[FAIL]\09The syscall worked but flags were cleared (flags = 0x%lx but expected 0x%lx set)\0A\00", align 1
@nerrs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @do_it to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_it(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = call i64 (...) @get_eflags()
  %5 = load i64, i64* %2, align 8
  %6 = or i64 %4, %5
  %7 = call i32 @set_eflags(i64 %6)
  %8 = load i32, i32* @SYS_getpid, align 4
  %9 = call i32 @syscall(i32 %8)
  %10 = call i64 (...) @get_eflags()
  store i64 %10, i64* %3, align 8
  %11 = load i64, i64* %3, align 8
  %12 = load i64, i64* %2, align 8
  %13 = and i64 %11, %12
  %14 = load i64, i64* %2, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %1
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  br label %24

18:                                               ; preds = %1
  %19 = load i64, i64* %3, align 8
  %20 = load i64, i64* %2, align 8
  %21 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([89 x i8], [89 x i8]* @.str.1, i64 0, i64 0), i64 %19, i64 %20)
  %22 = load i32, i32* @nerrs, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* @nerrs, align 4
  br label %24

24:                                               ; preds = %18, %16
  ret void
}

declare dso_local i32 @set_eflags(i64) #1

declare dso_local i64 @get_eflags(...) #1

declare dso_local i32 @syscall(i32) #1

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
